# taskatlas

./: .gitignore  AGENT_GUIDE.md  CHANGELOG.md  CONCEPT.md  CONTRIBUTING.md  CRITICAL_REVIEW.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
taskatlas/: __init__.py  _atlas.py  _base.py  _event.py  _filtering.py  _goal.py  _identity.py  _link.py  _task.py  _types.py  _views.py
tests/: test_atlas.py  test_event.py  test_filtering.py  test_goal.py  test_history.py  test_identity.py  test_link.py  test_relationships.py  test_serialization.py  test_task.py  test_types.py  test_views.py
tutorials/: 01_quickstart.md  02_modeling_a_real_project.md  03_relationships_and_structure.md  04_history_and_evolution.md  05_views_and_context.md  06_persistence_and_programmatic_use.md  07_filtering_and_retrieval.md
