[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskatlas"
version = "0.0.2"
description = "A lean Python library for representing goals, tasks, relationships, priority, evolution, and history."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "James A. Rolfsen", email = "james@think.dev" }
]
maintainers = [
    { name = "James A. Rolfsen", email = "james@think.dev" }
]
keywords = ["tasks", "goals", "project-management", "work-tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/jrolf/taskatlas"
Repository = "https://github.com/jrolf/taskatlas"
Issues = "https://github.com/jrolf/taskatlas/issues"
Changelog = "https://github.com/jrolf/taskatlas/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
include = ["taskatlas*"]
